master: fix task content width overflow.

--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -60,6 +60,7 @@ mat-form-field {
     }
 
     .task-content {
+      word-break: break-word;
       font-size: 0.8rem;
     }
   }
